# heart-stroke-predictor

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: model_pipeline.py  streamlit_app.py
artifacts/: final_preprocessor.pkl  final_stroke_model.pkl
notebooks/: stroke_risk_analysis.ipynb
scripts/: bmi_imputer.py  utilities.py
